<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- General-->
    <string name="app_name">AUGALŲ RATAS</string>
    <string name="program_version_number">0.1.0</string>
    <string name="upload">Įkelti</string>
    <string name="go_back">Grįžti</string>
    <string name="send">Siųsti</string>
    <string name="change">Redaguoti</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--About-->
    <string name="about">Apie</string>
    <string name="program_version">Programos versija</string>
    <string name="program_description">Programos aprašymas</string>
    <!--Add post-->
    <string name="sell_plant">Parduoti augalą</string>
    <string name="type_in_title">Įveskite pavadinimą</string>
    <string name="type_in_plant_description">Įveskite augalo aprašymą</string>
    <string name="type_in_price">Įveskite kainą</string>
    <string name="upload_photo">Įkelkite nuotrauką</string>
    <!--First load screen-->
    <string name="have_an_account">Jau turi paskyrą?</string>
    <!--Forgotten password-->
    <string name="forgotten_password">Pamiršai slaptažodį?</string>
    <string name="used_email">Naudotas el. paštas</string>
    <string name="send_forgotten_password_email">Siųsti laišką</string>
    <!--Help-->
    <string name="faq">DUK</string>
    <string name="question1">Klausimas 1</string>
    <string name="question2">Klausimas 2</string>
    <string name="question3">Klausimas 3</string>
    <string name="answer1">Atsakymas 1</string>
    <string name="answer2">Atsakymas 2</string>
    <string name="answer3">Atsakymas 3</string>
    <string name="have_problems">Turite problemų? Pasiūlymų? Prašom parašyti mums!</string>
    <string name="problem">Įrašykite problemą ar pasiūlymą</string>
    <!--Login-->
    <string name="hello">Labas!</string>
    <string name="sign_in">Prisijungti</string>
    <string name="forgot_my_password">Pamiršau slaptažodį</string>
    <!--Main page-->
    <string name="welcome">"Sveiki atvykę,"</string>
    <string name="news">Naujienos</string>
    <!--Menu overlay-->
    <string name="main_page">Pagrindinis puslapis</string>
    <string name="plant_gallery">Augalų galerija</string>
    <string name="upload_plant">Įkelti augalą</string>
    <string name="taking_care_of_plants">Augalų priežiūra</string>
    <string name="cart">Pirkinių krepšelis</string>
    <string name="account">Paskyra</string>
    <string name="subscribe">Prenumeruoti</string>
    <string name="log_out">Atsijungti</string>
    <!--Notifications-->
    <string name="notifications">Pranešimai</string>
    <string name="post_viewed">Skelbimo peržiūra</string>
    <string name="post_shared">Skelbimo pasidalinimas</string>
    <string name="post_liked">Patinka skelbimas</string>
    <string name="plant_bought">Augalo pirkimas</string>
    <string name="post_viewed_description">Skelbimo peržiūra aprašymas</string>
    <string name="post_shared_description">Skelbimo pasidalinimas aprašymas</string>
    <string name="post_liked_description">Patinka skelbimas aprašymas</string>
    <string name="plant_bought_description">Augalo pirkimas aprašymas</string>
    <!--Post description-->
    <string name="add_to_cart">Pridėti į pirkinių krepšelį</string>
    <!--Privacy-->
    <string name="privacy_policy">Privatumo politika</string>
    <string name="rules">Taisyklės ir naudojimosi politika</string>
    <string name="read_and_agreed_with_privacy">Perskaičiau ir sutinku su privatumo politika</string>
    <!--Register-->
    <string name="register">Registruokis</string>
    <string name="do_register">Registruokis</string>
    <string name="tagline">Ir mainykis augalais lengvai!</string>
    <string name="email">el. paštas</string>
    <string name="username">Vartotojo vardas</string>
    <string name="password">Slaptažodis</string>
    <string name="repeat_password">Pakartoti slaptažodį</string>
    <string name="phone_number">Telefono numeris</string>
    <!--Settings-->
    <string name="user_data">Asmeniniai duomenys</string>
    <string name="help">Pagalba</string>
    <string name="settings">Nustatymai</string>
    <!--Cart-->
    <string name="delivery_methods">Pristatymo būdai</string>
    <string name="delivery_seller">Atsiėmimas tiesiai iš pardavėjo</string>
    <string name="delivery_post">Atsiėmimas paštomate</string>
    <string name="delivery_carrier">Pristatymas kurjeriu</string>
    <string name="payment_method">Mokėjimo būdas</string>
    <string name="pay_card">Mokėjimas kortele</string>
    <string name="apple_pay">Apple pay</string>
    <string name="google_pay">Google pay</string>
    <string name="buy_selected">Pirkti pažymėtus</string>
    <!--Subscription-->
    <string name="monthly_subscription">Mėnesio prenumerata!</string>
    <string name="subsciption_privilages" tools:ignore="TypographyEllipsis">Ką gausite užsiprenumeravus?...</string>
    <string name="subscription_price" tools:ignore="TypographyEllipsis">Kaina...</string>
    <string name="successful_subscription">Sėkmingai užprenumeruota!</string>
    <string name="from_now_on" tools:ignore="TypographyEllipsis">Nuo šiol galite naudotis šiomis funkcijomis...</string>
    <!--User posts-->
    <string name="my_plants">Mano augalai</string>
    <!--Pop ups-->
    <string name="empty_fields">Visi laukai turi būti išpildyti</string>
    <string name="wrong_account">Neteisingas vardas ar slaptažodis</string>n

    <!--BackButton To Do-->
    <string name="back_btn">Back button icon</string>
    <string name="lotus_icn">Lotus icon</string>
    <string name="hamburger_btn">Hamburger icon</string>
    <string name="plant_img">Plant image</string>
    <string name="heart_icn">Heart icon</string>
    <string name="naujienos_antraste">Naujienos antraštė</string>
    <string name="news_highlight">Naujienos pagrindine pastraipa</string>
    <string name="news_text">Naujienos tekstas</string>
    <string name="privacy_text">Naudojimo ir privatumo politikos tekstas</string>
    <string name="plant_name">Augalo Pavadinimas</string>
    <string name="about_plant">Apie</string>
    <string name="user_icon">user_icon</string>
    <string name="price">Kaina</string>
    <string name="seller_name">Pardavėjas vardas</string>
    <string name="plant_seller_description">Augalo aprašymas</string>
    <string name="plant_origin">Augalo kilmė</string>
    <string name="origin">Kilme</string>
    <string name="how_to_take_care_of">Kaip prižiūrėti?</string>
    <string name="maintenance">Priežiūra</string>
    <string name="letter_for_filtering">A</string>
    <string name="news_img">News image</string>
    <string name="delete_user">Ištrinti vartotoją</string>

    <string-array name="spinner_names">
        <item>Mano skelbimai</item>
        <item>Kitų žmonių skelbimai</item>
    </string-array>


</resources>