<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contstraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ShoppingCart">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view25"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_background_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/return_from_shopping_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/back_btn"
            android:background="@drawable/arrow_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/lotus_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/lotus_icn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_background_5"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView46"
            app:layout_constraintTop_toBottomOf="@+id/textView41">

            <ImageView
                android:id="@+id/cart_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/plant_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/cart_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start"
                android:paddingHorizontal="16sp"
                android:text="@string/subscription_price"
                android:textColor="@color/text_brown"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cart_photo"
                app:layout_constraintTop_toBottomOf="@+id/cart_description" />

            <TextView
                android:id="@+id/cart_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start"
                android:paddingHorizontal="16sp"
                android:text="@string/about_plant"
                android:textColor="@color/text_brown"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/cart_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cart_photo"
                app:layout_constraintTop_toBottomOf="@+id/cart_seller" />

            <TextView
                android:id="@+id/cart_seller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start"
                android:paddingHorizontal="16sp"
                android:text="@string/seller_name"
                android:textColor="@color/text_brown"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/cart_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cart_photo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/get_mail_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@android:color/black"
            android:background="@drawable/square_background_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/get_mail_from_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start|center_vertical"
                android:text="@string/delivery_seller"
                android:textColor="@color/text_brown"
                app:buttonTint="@color/text_brown"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/get_mail_from_drop_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/get_mail_from_drop_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start|center_vertical"
                android:text="@string/delivery_post"
                android:textColor="@color/text_brown"
                app:buttonTint="@color/text_brown"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/get_mail_from_carrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/get_mail_from_seller" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/get_mail_from_carrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start|center_vertical"
                android:text="@string/delivery_carrier"
                android:textColor="@color/text_brown"
                app:buttonTint="@color/text_brown"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/get_mail_from_drop_box" />

        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView49">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pay_by_card"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background_3"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="16sp"
                android:text="@string/pay_card"
                android:textColor="@color/dark_brown"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/pay_by_apple_pay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pay_by_apple_pay"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background_3"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="16sp"
                android:text="@string/apple_pay"
                android:textColor="@color/dark_brown"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/pay_by_google_pay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pay_by_card" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pay_by_google_pay"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:background="@drawable/button_background_3"
                android:fontFamily="@font/spectral_sc"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="16sp"
                android:text="@string/google_pay"
                android:textColor="@color/dark_brown"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pay_by_apple_pay" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/spectral_sc"
            android:gravity="center"
            android:text="@string/delivery_methods"
            android:textColor="@color/text_brown"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/spectral_sc"
            android:gravity="center"
            android:text="@string/payment_method"
            android:textColor="@color/text_brown"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_mail_options" />


        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/spectral_sc"
            android:gravity="center"
            android:text="@string/cart"
            android:textColor="@color/text_brown"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>